# pyaeron

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  advanced.md  api-contract.md  api-reference.md  callbacks.md  embedded-driver.md  integration.md  release.md  troubleshooting.md  versioning.md
examples/: README.md  basic_publisher.py  basic_subscriber.py  counters_demo.py  invoker_mode_pubsub.py  try_claim_publisher.py
pyaeron/: __init__.py  _capi.py  _driver_capi.py  _generated_cdef.py  _version.py  buffer_claim.py  client.py  cnc.py  context.py  counter.py  counters_reader.py  driver.py  errors.py  exclusive_publication.py  handlers.py  image.py  publication.py  subscription.py  types.py  util.py
scripts/: build_aeron.sh  generate_cdef.py
tests/integration/: __init__.py  conftest.py  support.py  test_capi_symbol_smoke.py  test_client_lifecycle.py  test_embedded_driver.py  test_phase1_integration_smoke.py  test_phase8_advanced.py  test_pubsub_matrix.py  test_pubsub_mvp.py
tests/unit/: test_capi.py  test_driver.py  test_driver_capi.py  test_errors.py  test_handlers.py  test_imports.py  test_lifecycle.py  test_phase8_wrappers.py  test_wrapper_behaviors.py
